src/objects/SB_Cuenta_Solucion__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SB - Cuenta - Soluciones</relationshipLabel>
        <relationshipName>SB_Cuenta_Soluciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posicion__c</fullName>
        <label>Posicion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Nodo__c</fullName>
        <label>Super Ball - Nodo</label>
        <referenceTo>Super_Ball_Nodo__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Soluciones</relationshipLabel>
        <relationshipName>SB_Cuenta_Soluciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Solucion__c</fullName>
        <label>Super Ball - Solucion</label>
        <referenceTo>Super_Ball_Solucion__c</referenceTo>
        <relationshipLabel>SB - Cuenta - Soluciones</relationshipLabel>
        <relationshipName>SB_Cuenta_Soluciones</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>estado__c</fullName>
        <label>estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oportunidades Ganadas</fullName>
                </value>
                <value>
                    <fullName>Oportunidades en Funnel</fullName>
                </value>
                <value>
                    <fullName>Lineas de trabajo Priorizadas</fullName>
                </value>
                <value>
                    <fullName>Lineas a Explorar</fullName>
                </value>
                <value>
                    <fullName>Lineas que no Aplican en el Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SB - Cuenta - Solucion</label>
    <nameField>
        <label>Nombre de SB - Cuenta - Solucion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SB - Cuenta - Soluciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>